<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mess2_logger_py</name>
  <version>0.0.0</version>
  <description>ROS2 package for logging messages on topics directly to .csv files.</description>
  <maintainer email="marinarasauced@outlook.com">mess2</maintainer>
  <license>Apache 2.0</license>
  
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>flir_camera_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>map_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pendulum_msgs</depend>
  <depend>rosbag2_interfaces</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>statistics_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>turtlesim</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rmw_dds_common</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
